<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--String List-->
    <string name="app_name">AndroidWebProject</string>
    <string name="button_message_list">Afficher la liste des messages</string>
    <string name="button_write_message">Écrire un message</string>
    <string name="action_settings">Paramètres</string>
    <string name="username">Nom utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="clear_button">Vider</string>
    <string name="connect_button">Se Connecter</string>
    <string name="send_message_button">Envoyer</string>
    <string name="error_message">Message d\'erreur</string>
    <string name="main_title">Formulaire de connexion</string>
    <string name="message_header">Écrivez votre message ici</string>
    <string name="message_sent">Message envoyé</string>

    <string name="alert_Disconnection_Title">Déconnection</string>
    <string name="alert_Disconnection_Message">Cliquez sur oui pour quitter.</string>
    <string name="alert_Disconnection_Yes">Oui</string>
    <string name="alert_Disconnection_No">Non</string>
    <string name="Disconnection_Toast_Message">Vous avez été déconnecté</string>

    <string name="alert_Return_Title">Revenir en arrière ?</string>
    <string name="alert_Return_Message">Cliquez sur oui pour revenir en arrière.</string>
    <string name="alert_Return_Yes">Oui</string>
    <string name="alert_Return_No">Non</string>

    <string name="Toast_Cleaning_Message">Champs nettoyés !</string>
    <string name="Log_Error_Message">Utilisateur et/ou mot de passe incorrects</string>
    <string name="signup">Pas de compte ? Enregistrez - vous !</string>
    <string name="EXTRA_LOGIN" translatable="false">username</string>
    <string name="EXTRA_PASS" translatable="false">password</string>
    <string name="English_Language">Langue Anglaise</string>
    <string name="refresh_button">Rafraîchir</string>
    <string name="Spanish_Language">Langue Espagnole</string>
    <string name="French_Language">Langue Française</string>
    <string name="SearchQueryHint">Chercher ici</string>
    <string name="signin_Title">Formulaire d\'enregistrement</string>
    <string name="signin_button">S\'enregistrer</string>
    <string name="Signin_Error_Message_User_Exist">Utilisateur déja existant !</string>
    <string name="Signin_Error_Message_Not_Found">Erreur 404 : Page non trouvée !</string>
    <string name="Signin_Success_Message">Compte enregistré !</string>
    <string name="Other_error">Erreur</string>
    <string name="Error_Invalid_Body_Objects">Mauvais objets dans le body</string>
    <string name="Authentification_Error">Erreur d\'authentification</string>

</resources>
